clang/test/BSC/Negative/Others/use_of_undeclared_identifier/use_of_undeclared_identifier.cbs
// RUN: %clang_cc1 -verify %s

int main() {
    f(); // expected-error{{use of undeclared identifier 'f'}}
    return g(); // expected-error{{use of undeclared identifier 'g'}}
}